after fixing the home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="explore">Explore</string>
     <string name="saved">Saved</string>
     <string name="plan">Plan</string>
-    <string name="meal_of_the_day">Meal of The day</string>
+    <string name="meal_of_the_day">What’s Cooking Today?</string>
     <string name="title_favourites">Favourites</string>
     <string name="title_activity_meal_details">MealDetailsActivity</string>
     <string name="large_text">
