after change the APP name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">DishDiary</string>
+    <string name="app_name">ChefBuddy</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="add">+</string>
-   
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="meal_list">Meal list</string>
     <string name="explore">Explore</string>
