--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="add">+</string>
-
     <string name="hello_blank_fragment">Hello blank fragment </string>
-    <string name="meal_list">food list</string>
+    <string name="meal_list">Meal list</string>
     <string name="explore">Explore</string>
     <string name="saved">Saved</string>
     <string name="plan">Plan</string>
